--- a/exercisetracker/package.json
+++ b/exercisetracker/package.json
@@ -2,10 +2,15 @@
   "name": "exercisetracker",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000/exercisetracker",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.4",
+    "express": "^4.18.2",
+    "mongoose": "^7.0.2",
+    "nodemon": "^2.0.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
